--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,40 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
     <!-- CODE HERE -->
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="/Exercise_A/assets/bootstrap.png" alt="Brand" style="height:50px">
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a href="#" class="nav-link text-primary">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-primary">Link</a>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- List Group -->
+    <ul class="list-group">
+      <li class="list-group-item">Item I</li>
+      <li class="list-group-item">Item II</li>
+      <li class="list-group-item">Item III</li>
+      <li class="list-group-item">Item IV</li>
+      <li class="list-group-item">Item V</li>
+    </ul>
+
+    <!-- Buttons -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
