--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/Exercise_B/assets/style/stylesheet.css">
+    
     <title>Flower shop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href='/assets/style/stylesheet.css'>
 </head>
 
 <body>
     <!-- header section starts here -->
-    <header><img src='/Exercise_B/assets/images/logo.png'></header>
+    <header><img src='/assets/images/logo.png'></header>
     <section class='hero'>
         <div class='overlay'>
         </div>
@@ -26,19 +27,19 @@
         <div class="container">
             <div class="row row-cols-2">
         <div class='icon col'>
-            <img src='/Exercise_B/assets/images/flower-icon.png'>
+            <img src='/assets/images/flower-icon.png'>
             <p>Flowers for every kind of situation</p>
         </div>
         <div class='icon col'>
-            <img src='/Exercise_B/assets/images/payment-icon.png'>
+            <img src='/assets/images/payment-icon.png'>
             <p>All major payment types accepted</p>
         </div>
         <div class='icon col'>
-            <img src='/Exercise_B/assets/images/phone-icon.png'>
+            <img src='/assets/images/phone-icon.png'>
             <p>Free consultation</p>
         </div>
         <div class='icon col'>
-            <img src='/Exercise_B/assets/images/truck-icon.png'>
+            <img src='/assets/images/truck-icon.png'>
             <p>City Wide delivery</p>
             </div>
         </div>
