--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,52 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+
+    <!-- Bootstrap CSS -->
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+    crossorigin="anonymous"
+    />
+
+    <Title>Exercise A</Title>
   </head>
   <body>
     <!-- CODE HERE -->
+    <!-- Bootstrap Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"><img src="assets/bootstrap.png" width="30" height="30" class="d-inline-block align-top" alt="bootstrapLogo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link text-primary" href="#">Home </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    
+    <!-- Bootstrap List Group -->
+    <!-- List Group Flush to remove borders -->
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Item 1</li>
+      <li class="list-group-item">item 2</li>
+      <li class="list-group-item">Item 3</li>
+      <li class="list-group-item">Item 4</li>
+      <li class="list-group-item">Item 5</li>
+    </ul>
+
+    <!-- Bootstrap Buttons -->
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+
   </body>
 </html>
