--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -8,10 +8,42 @@
     <meta name="description" content="" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+      content="width=device-width, initial-scale=1">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/> <!-- bootstrap -->
+    
   </head>
   <body>
-    <!-- CODE HERE -->
-  </body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <a href="#" class="navbar-brand"> 
+        <img style="height: 50px" src="/FTWD_Web_Day_03/Exercise_A/assets/bootstrap.png" alt="bootstrap_icon"></a> <!-- Add Bootsrap Icon -->
+
+      <ul class="navbar-nav"><!-- Add Nav Bar -->
+        <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+        <li class="nav-item "><a href="#" class="nav-link">Link</a></li>
+      </ul>
+    </nav>
+
+    <div>
+      <ul class="list-group"><!-- Add List -->
+        <li class="list-group-item">Item I</li>
+        <li class="list-group-item">Item II</li>
+        <li class="list-group-item">Item III</li>
+        <li class="list-group-item">Item IV</li>
+        <li class="list-group-item">Item V</li>
+      </ul>
+    </div>
+
+<!-- Buttons -->
+    <div class="btn btn-primary"> Primary </div>
+    <div class="btn btn-secondary"> Secondary </div>
+    <div class="btn btn-success"> Success </div>
+    <div class="btn btn-danger"> Danger </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
+
+</body>
+
 </html>
