--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -10,8 +10,72 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <link
+     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- CODE HERE -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <img
+            class="img-responsive"
+            src="./assets/bootstrap.png"
+            alt="Brand"
+            style="width: 30px"
+            />
+          </a>
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a
+              class="nav-link"
+              href="./page1.html"
+              style="margin-right: 20px"
+              >Home</a>
+            </li>
+            </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="./page2.html"
+                style="margin-right: 20px"
+                >Link</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <ul class="list-group">
+      <li class="list-group-item">Item I</li>
+      <li class="list-group-item">Item II</li>
+      <li class="list-group-item">Item III</li>
+      <li class="list-group-item">Item IV</li>
+      <li class="list-group-item">Item V</li>
+    </ul>
+    <div>
+      <span class="btn btn-primary">Button Primary</span>
+      <span class="btn btn-info"> Button Info</span>
+      <span class="btn btn-warning">Button Warning</span>
+      <span class="btn btn-danger">Button Danger</span>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
