--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Google Font - Lato -->
     <link
@@ -19,16 +20,103 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header>
+      <img src="./assets/images/logo.png" />
+    </header>
+
     <!--Banner Jumbotron of the image-->
+    <section class="jumbotron jumbotron-fluid banner">
+      <div class="heading">
+        <h1 class="display-4">Beautiful Flowers</h1>
+        <button id="learn-more">Learn More</button>
+      </div>
+    </section>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <section class="row no-gutters icons">
+      <!-- Flowers Div -->
+      <div class="col-xl-3 col-lg-6 col-md-6">
+        <div class="row container-fluid icon-block">
+          <div class="col-6">
+            <img
+              src="./assets/images/flower-icon.png"
+              alt="flower icon"
+              class="img-fluid icon"
+            />
+          </div>
+          <div class="col-6 icon-text">
+            <p>Flower for every kind of situation.</p>
+          </div>
+        </div>
+      </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+      <!-- Payments Div -->
+      <div class="col-xl-3 col-lg-6 col-md-6">
+        <div class="row container-fluid icon-block">
+          <div class="col-6">
+            <img
+              src="./assets/images/flower-icon.png"
+              alt="payment icon"
+              class="img-fluid icon"
+            />
+          </div>
+          <div class="col-6 icon-text">
+            <p>All major payments kinds accepted</p>
+          </div>
+        </div>
+      </div>
 
-    <!-- Delivery Div -->
+      <!-- Consultation Div -->
+      <div class="col-xl-3 col-lg-6 col-md-6">
+        <div class="row container-fluid icon-block">
+          <div class="col-6">
+            <img
+              src="./assets/images/phone-icon.png"
+              alt="phone icon"
+              class="img-fluid icon"
+            />
+          </div>
+          <div class="col-6 icon-text">
+            <p>Free consultation</p>
+          </div>
+        </div>
+      </div>
 
-    <!--Scripts required for bootstrap CDN-->
+      <!-- Delivery Div -->
+      <div class="col-xl-3 col-lg-6 col-md-6">
+        <div class="row container-fluid icon-block">
+          <div class="col-6">
+            <img
+              src="./assets/images/truck-icon.png"
+              alt="truck icon"
+              class="img-fluid icon"
+            />
+          </div>
+          <div class="col-6 icon-text">
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Latest compiled and minified Popper - Used for pop up button -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+      integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Latest compiled and minified Bootstrap -->
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+      integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
