--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,8 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
-    <!-- Google Font - Lato -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
@@ -19,16 +18,49 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-expand-lg bg-light border">
+          <img alt="Brand" src="./assets/images/logo.png" alt="logo">
+    </nav>    
     <!--Banner Jumbotron of the image-->
+    <div class="img-container">
+      <div class="button">
+        <h1>Beautiful Flowers</h1>
+        <button class="btn btn-primary">Learn more</button>
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
+    <div class="row no-gutters icons"></div>
     <!-- 4 containers -->
+    <div class="col-6">
+      <img src="assets/images/flower-icon.png" alt="flower icon"></div>
+    <div class="col-3 icon-text">
+      <p>Flower for every kind of situation.</p></div>
+    </div>
 
     <!-- Payments Div -->
+    <div class="row icon-block container-fluid ">
+      <div class="col-6">
+        <img src="assets/images/payment-icon.png" alt="payment icon">
+    </div>
+
     <!-- Consultation Div -->
+    <div class="icon-block col-9 col-md-5 col-lg-2">
+      <div class="icon-text">
+        <img class="icon" src="./assets/images/phone-icon.png" alt="phone icon">
+        <p>Free consultation</p>
+      </div>
+    </div>
 
     <!-- Delivery Div -->
+    <div class="icon-block col-9 col-md-5 col-lg-2">        
+        <img class="icon" src="./assets/images/truck-icon.png" alt="truck icon">
+        <p>City wide delivery</p>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+
   </body>
 </html>
