--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -4,31 +4,45 @@
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"crossorigin="anonymous">
 
-    <!-- Link and CDN required for bootstrap -->
-
-    <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
-    <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <header>
+      <div><img src="./assets/images/logo.png" alt="logo"></div>
+    </header>
+     <div class="jumbotron jumbotron-fluid banner">
+      <img src="assets/images/flowershop.jpg" style="width:100%; box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.362)" alt="flowerBanner">
+      <div class="container-fluid headline">
+        <h1 class= "my-4 display-5">Beautiful Flower</h1>
+        <button type="button" class="btn btn-success btn-lg">Learn More</button>
+      </div>
+    </div>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+    <footer>
+      <div class="container-fluid">
+        <div class="row row-cols-sm-1 row-cols-lg-4 row-cols-md-2 row-cols-1">
+          <div class="col"><img src="./assets/images/flower-icon.png" alt="flower-icon"><p>Flower for every kind of situation</p></div> 
+  
+          <div class="col"><img src="./assets/images/payment-icon.png" class="align-self-center"alt="payment-icon"><p>All Major Paymenmts kinds accepted</p></div>
 
-    <!-- Delivery Div -->
+          <div class="col"><img src="./assets/images/phone-icon.png" class="align-self-center"alt=""><p>Free Consultation</p>
+          </div> 
+  
+          <div class="col"><img src="./assets/images/truck-icon.png" alt="truck-icon" class="align-self-center"><p>City Wide Delivery</p></div>
+        
+        </div>
+      </div>
+    </footer>
 
-    <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
+
   </body>
 </html>
