--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -18,17 +18,60 @@
   </head>
 
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+      <!--Header (flower shop logo block element)-->
+    <nav class="navbar bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/logo.png" alt="logo" height="60">
+        </a>
+      </div>
+    </nav>
+
+        <!--Banner Jumbotron of the image-->
+      <div class="container-fluid px-0 imgContainer">
+        <div class="row mx-0">
+            <div class="col-12 px-0">
+            <img src="./assets/images/flowershop.jpg" class="main-img img-fluid w-100">
+            <h1 class="heading1"> Beautiful Flowers</h1>
+            <button type="button" class="button">Success</button>
+            </div>
+        </div>
+    </div>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
-
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
-
+    <div class="bottomSection">
+      <div class="container-fluid">   
+     <!-- Flowers Div -->
+     <div class="row" style="margin-bottom:20px">
+     <div class="grid-row col-lg-3 col-md-6 col-sm-12"> 
+     <img src="./assets/images/flower-icon.png" alt="flower">
+     <p>Flowers for every kind of situation</p>
+   </div>
+ 
+     <!-- Payments Div -->
+     <div class="payment grid-row col-lg-3 col-md-6 col-sm-12">       
+       <img src="./assets/images/payment-icon.png" alt="payment">
+       <p>All majot payments kinds accepted</p>
+     </div>
+ 
+     <!-- Consultation Div -->
+     <div class="consultation grid-row col-lg-3 col-md-6 col-sm-12">
+       <img src="./assets/images/phone-icon.png" alt="phone">
+       <p>Free consulation</p>
+     </div>
+ 
+     <!-- Delivery Div -->
+     <div class="delivery grid-row col-lg-3 col-md-6 col-sm-12"> 
+       <img src="./assets/images/truck-icon.png" alt="truck">
+       <p>City wide delivery</p>
+     </div>
+     </div>
+   </div>
+   </div>
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script> 
+  </body>
   </body>
 </html>
